[gd_scene load_steps=4 format=3 uid="uid://cobt3qumr1gs2"]

[ext_resource type="Script" path="res://src/menu/PauseMenuScript.gd" id="1_ihpp7"]
[ext_resource type="Script" path="res://src/menu/PauseMenuCanvasScript.gd" id="2_uo5hj"]
[ext_resource type="PackedScene" uid="uid://b63mipdhbgvn2" path="res://scenes/settings.tscn" id="3_q1ugs"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ihpp7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_uo5hj")

[node name="Pause" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Pause"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Pause/CenterContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Pause/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Pause/CenterContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="PauseLabel" type="Label" parent="CanvasLayer/Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="CanvasLayer/Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Continue"

[node name="SettingsButton" type="Button" parent="CanvasLayer/Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Main Menu"

[node name="QuitButton" type="Button" parent="CanvasLayer/Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit to Desktop"

[node name="Settings" parent="CanvasLayer" instance=ExtResource("3_q1ugs")]
visible = false

[connection signal="pressed" from="CanvasLayer/Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ContinueButton" to="CanvasLayer" method="cont"]
[connection signal="pressed" from="CanvasLayer/Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="CanvasLayer" method="toSettings"]
[connection signal="pressed" from="CanvasLayer/Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="CanvasLayer" method="backToMainMenu"]
[connection signal="pressed" from="CanvasLayer/Pause/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="CanvasLayer" method="quitToDesktop"]
[connection signal="hidden" from="CanvasLayer/Settings" to="CanvasLayer" method="goBackFromSettings"]
